#34, correct responsiveness of Pokemon view on mobile

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -2030,9 +2030,9 @@ li a, li a:hover {
 .pokemon-navigation {
     display: block;
     padding-top: 1rem;
-    padding-right: 2rem;
+    padding-right: 1rem;
     padding-bottom: 2rem;
-    padding-left: 2rem;
+    padding-left: 1rem;
     margin-bottom: 1rem;
     list-style: none;
     background-color: #e9ecef;
